--- a/styled-html.html
+++ b/styled-html.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="header">
-        <span>Hi</span>
+    </div>
+
+    <div class="picture">
+        <img src="./blackhole.jpg" class="picture-img">
     </div>
 </body>
 </html>
