--- a/styled-html.html
+++ b/styled-html.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
-    </div>
-
-    <div class="picture">
-        <img src="./blackhole.jpg" class="picture-img">
-    </div>
+    <button class="primary">CLICK ME!</button>
 </body>
 </html>
 
