some more changes

--- a/first-assignment/index.html
+++ b/first-assignment/index.html
@@ -43,6 +43,7 @@
                 <li>- Sound recording of children;</li>
             </ul>
         </div>
+        <section class="clear"></section>
     </main>
     <section class="about-us">
         <h2>About The Studio</h2>
